--- a/content/schedule.html
+++ b/content/schedule.html
@@ -11,9 +11,9 @@
 <body>
   <div id="navigation">
     <nav>
-      <a href="../index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="https://genayajames.github.io/">Home</a>
+      <a href="about">About</a>
+      <a href="contact">Contact</a>
       <a id="currentPage" href="">Schedule</a>
     </nav>
   </div>
