--- a/content/contact.html
+++ b/content/contact.html
@@ -11,10 +11,10 @@
 <body>
   <div id="navigation">
     <nav>
-      <a href="../index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="https://genayajames.github.io/">Home</a>
+      <a href="about">About</a>
       <a id="currentPage" href="">Contact</a>
-      <a href="schedule.html">Schedule</a>
+      <a href="schedule">Schedule</a>
     </nav>
   </div>
 
