Revert "Merge pull request #1 from GenayaJames/branch_1"
This reverts commit 2596a1a4ae36374b70aef172ea7bbeddfb27fae2, reversing
changes made to a1e8049a12e7e6cdd71029f191289cfadea659fc.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div id="navigation">
     <nav>
       <a id="currentPage" href="">Home</a>
-      <a href="content/about">About</a>
-      <a href="content/contact">Contact</a>
-      <a href="content/schedule">Schedule</a>
+      <a href="content/about.html">About</a>
+      <a href="content/contact.html">Contact</a>
+      <a href="content/schedule.html">Schedule</a>
     </nav>
   </div>
 
