--- a/content/about.html
+++ b/content/about.html
@@ -10,10 +10,10 @@
 <body>
   <div id="navigation">
     <nav>
-      <a href="https://genayajames.github.io/">Home</a>
+      <a href="../index.html">Home</a>
       <a id="currentPage" href="">About</a>
-      <a href="contact">Contact</a>
-      <a href="schedule">Schedule</a>
+      <a href="contact.html">Contact</a>
+      <a href="schedule.html">Schedule</a>
     </nav>
   </div>
 
