--- a/content/schedule.html
+++ b/content/schedule.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="../css/index.css">
   <link rel="stylesheet" type="text/css" href="../css/schedule.css">
-  <link rel="stylesheet" type="text/css" href="../css/yearlyschedule.css">
 </head>
 <body>
   <div id="navigation">
@@ -902,6 +901,7 @@
         <div class="clear"></div>
         <div id="houseIMG"></div>
         <div id="address">
+          <p span class="bold">Little Lambs Day School</p>
           <p><span class="bold">Address: </span><a href="https://www.google.com/maps/place/3745+Willett+Ave,+Bronx,+NY+10467/@40.883136,-73.8671797,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f33d8f414921:0x8dd28dea0c0a368d!8m2!3d40.883136!4d-73.864991">3745 Willett Ave, Bronx, NY, 10467</a></p>
           <p><span class="bold">Office Phone: </span><a id="number" href="tel:718-519-6170">(718) 519-6170</a></p>
           <p><span class="bold">Business Days: </span>Monday - Friday</p>
