--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div id="aboutLink">
           <div class="abouts alignRight" id="ageIndex">
-            <p>Are you looking for a caring, fun-filled environment for your child? An environment that stimulates their young minds? Then you've come to the right place. Children between the ages of 2 and 5 (toddlers, preschoolers) are encouraged to join.</p>
+            <p>Are you looking for a caring, fun-filled environment for your child? An environment that stimulates their young minds? Then Little Lambs Day School is the right place for you. Children between the ages of 2 and 5 (toddlers, preschoolers) are encouraged to join.</p>
           </div>
           <div class="abouts alignRight" id="ages">            
             <p><div id="imgAbout" class="floatLeft"></div>Throughout the day they will be taught how to read and write, while they also get to socialize with their peers. We also offer an afterschool program for...</p>
@@ -65,6 +65,7 @@
           <div class="clear"></div>
           <div id="houseIMG"></div>
           <div id="address">
+            <p span class="bold">Little Lambs Day School</p>
             <p><span class="bold">Address: </span><a href="https://www.google.com/maps/place/3745+Willett+Ave,+Bronx,+NY+10467/@40.883136,-73.8671797,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f33d8f414921:0x8dd28dea0c0a368d!8m2!3d40.883136!4d-73.864991">3745 Willett Ave, Bronx, NY, 10467</a></p>
             <p><span class="bold">Office Phone: </span><a id="number" href="tel:718-519-6170">(718) 519-6170</a></p>
             <p><span class="bold">Business Days: </span>Monday - Friday</p>
