--- a/content/about.html
+++ b/content/about.html
@@ -46,7 +46,7 @@
   
       <div class="about alignRight" id="price">
         
-        <p><div id="imgPrice" class="floatLeft"></div>We make our rates affordable to make it possible for all children to have a place to be taken care of and get the education they need to be prepared to enter public/private schools. We also help afterschool kids with their homework if they're having trouble in that area. Please <a href="contact.html">contact</a> us for more information.</p>
+        <p><div id="imgPrice" class="floatLeft"></div>We make our rates affordable to make it possible for all children to have a place to be taken care of and get the education they need to be prepared to enter public/private schools. We also help afterschool kids with their homework if they're having trouble in that area. Please <a href="contact">contact</a> us for more information.</p>
         <div class="clear"></div>
       </div>
   
