--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="clear"></div>
           <div class="continueReading">
             <div class="line floatLeft"></div>
-            <div class="boxcr floatLeft"><a href="content/about.html">Keep Reading</a></div>
+            <div class="boxcr floatLeft"><a href="content/about">Keep Reading</a></div>
           </div>
         </div>
       </div>
