--- a/content/schedule.html
+++ b/content/schedule.html
@@ -48,16 +48,16 @@
           <p>Labor Day - Closed</p>
         </div>
 
-        <div id="M911" class="allEvents">
+        <div id="M1009" class="allEvents">
           <div class="pencil_icon"></div>
-          <h2>Monday, September 11, 2017</h2>
-          <p>Patriot Day</p>
+          <h2>Monday, October 9, 2017</h2>
+          <p>Columbus Day - Closed</p>
         </div>
 
-        <div id="915" class="allEvents">
+        <div id="F1110" class="allEvents">
           <div class="pencil_icon"></div>
-          <h2>Friday, September 15, 2017</h2>
-          <p>National POW/MIA Recognition Day</p>
+          <h2>Friday, November 10, 2017</h2>
+          <p>Veterans Day - Closed</p>
         </div>
 
         <div class="allEvents">
