--- a/content/schedule.html
+++ b/content/schedule.html
@@ -36,31 +36,8 @@
         <div id="eventInfoHeader" class="floatLeft"><h1>2<br/>0<br/>1<br/>7<br/> <br/>E<br/>v<br/>e<br/>n<br/>t<br/>s</h1></div>
 
       <div id="eventInfo" class="floatLeft">
-        <div id="M828F901" class="allEvents">
-          <div class="pencil_icon"></div>
-          <h2>Monday, August 28</h2>
-          <p>Closed until Friday, September 1, 2017</p>
-        </div>
-
-        <div id="M904" class="allEvents">
-          <div class="pencil_icon"></div>
-          <h2>Monday, September 4, 2017</h2>
-          <p>Labor Day - Closed</p>
-        </div>
-
-        <div id="M1009" class="allEvents">
-          <div class="pencil_icon"></div>
-          <h2>Monday, October 9, 2017</h2>
-          <p>Columbus Day - Closed</p>
-        </div>
-
-        <div id="F1110" class="allEvents">
-          <div class="pencil_icon"></div>
-          <h2>Friday, November 10, 2017</h2>
-          <p>Veterans Day - Closed</p>
-        </div>
-
-        <div class="allEvents">
+        
+        <div id="pencil_end" class="allEvents">
           <div class="pencil_icon"></div>
         </div>
 
