--- a/content/about.html
+++ b/content/about.html
@@ -64,56 +64,19 @@
             </ul>
           </div>
           <div>
-          <!--<div id="contentLeft" class="floatLeft">-->
           <div id="imgContent" class="floatRight"></div>
             <li><p>Learn the names of shapes and colors</p></li>
-            <!--<div id="imgContent" class="floatRight"></div>-->
             <li><p>When the weather allows it, kids will be able to go to the zoo, and other fun trips (Children are required to bring a permission slip signed by a parent/guardian)</p></li>
           </div>
-          <!--<div id="imgContent" class="floatLeft"></div>-->
         </ul>
         <div class="clear"></div>
         </div>
       </div>
 
-    <div id="right">
-      <div id="info" class="rightSide">
-        <h2>About Us</h2>
-        <div class="clear"></div>
-        <div id="houseIMG"></div>
-        <div id="address">
-          <p><span class="bold">Address: </span><a href="https://www.google.com/maps/place/3745+Willett+Ave,+Bronx,+NY+10467/@40.883136,-73.8671797,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f33d8f414921:0x8dd28dea0c0a368d!8m2!3d40.883136!4d-73.864991">3745 Willett Ave, Bronx, NY, 10467</a></p>
-          <p><span class="bold">Office Phone: </span><a id="number" href="tel:718-519-6170">(718) 519-6170</a></p>
-          <p><span class="bold">Business Days: </span>Monday - Friday</p>
-          <p><span class="bold">Business Hours: </span>7:00AM - 6:30PM</p>
-        </div>        
-      </div> 
-      
-      <div id="events" class="rightSide">
-        <h2>Upcoming Events</h2>
-        <div class="clear"></div>
-        <div class="event">
-          <dl>
-            <dt class="bold">Monday, August 28, 2017</dt>
-            <dd>School will be closed until Friday, September 1, 2017</dd>
-            <dt class="bold">Tuesday, August 29, 2017</dt>
-            <dd>Permission slips for the trip to the zoo are due.</dd>
-            <dt class="bold">Monday, September 04, 2017</dt>
-            <dd>Labor Day - School will be closed</dd>
-            <dt class="bold">Monday, September 05, 2017</dt>
-            <dd>School is in session</dd>
-            <dt class="bold">Monday, September 11, 2017</dt>
-            <dd>Patriot Day</dd>
-            <dt class="bold">Friday, September 15, 2017</dt>
-            <dd>National POW/MIA Recognition Day</dd>
-          </dl>
-        </div>
-      </div>
-
-      <div id="events" class="rightSide"></div>
-    </div>
+    <div id="right"></div>
 
     <div class="clear"></div>
   </div>
+  <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
