--- a/content/about.html
+++ b/content/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="../css/index.css">
   <link rel="stylesheet" type="text/css" href="../css/about.css">
+  <link rel="shortcut icon" type="png" href="../img/icon.png">
 </head>
 <body>
   <div id="navigation">
