--- a/content/schedule.html
+++ b/content/schedule.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="../css/index.css">
   <link rel="stylesheet" type="text/css" href="../css/schedule.css">
+  <link rel="shortcut icon" type="png" href="../img/icon.png">
   <script type="text/javascript" src="../js/jquery.min.js"></script>
 </head>
 <body>
