--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
         </div>
 
-        <div id="aboutLink">
+        <div id="aboutLink" class="info_sections">
           <div class="abouts alignRight" id="ageIndex">
             <p>Are you looking for a caring, fun-filled environment for your child? An environment that stimulates their young minds? Then Little Lambs Day School is the right place for you. Children between the ages of 2 and 5 (toddlers, preschoolers) are encouraged to join.</p>
           </div>
