--- a/content/contact.html
+++ b/content/contact.html
@@ -3,7 +3,7 @@
 <head>
   <title>Little Lambs Day School</title>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width; initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="../css/index.css">
   <link rel="stylesheet" type="text/css" href="../css/contact.css">
   <link rel="shortcut icon" type="png" href="../img/icon.png">
@@ -23,7 +23,7 @@
 
   <div id="wrapper">
     <div id="left">
-      <div id="pageInfoHeader" class="floatLeft"><h1>C<br/>o<br/>n<br/>t<br/>a<br/>c<br/>t<br/> <br/>U<br/>s</h1></div>
+      <div id="contact_usInfoHeader" class="pageInfoHeader floatLeft"></div>
       <div id="pageInfo" class="floatLeft">
         <div id="contact">
           <p id="contactP">If you have any questions or comments please reach out to us by doing one or both options below. We'll get back to you as soon as possible.</p>
@@ -35,10 +35,12 @@
                 <li><p><span class="bold">Business Hours:</span> 7:00AM - 6:30PM (Mon - Fri)</p></li>
               </ul>
             </div>
-            <li class="options"><p>Send us an email</p></li> 
+            <li class="options"><p>Send us an email at</p></li> 
           </ul>
 
-          <div id="emailPic"></div>
+          <div id="emailPic">
+            <p>ask@littlambsdayschool.com</p>
+          </div>
         </div>
       </div>
 
