--- a/content/schedule.html
+++ b/content/schedule.html
@@ -23,8 +23,7 @@
 
   <div id="wrapper">
     <div id="left">
-      <div id="pageInfoHeader" class="floatLeft"><h1>S<br/>c<br/>h<br/>e<br/>d<br/>u<br/>l<br/>e</h1></div>
-
+      <div id="scheduleInfoHeader" class="pageInfoHeader floatLeft"></div>
       <div id="pageInfo" class="floatLeft"> 
         <div id="aboutCalendar">
           <p><span style="color:red">*</span> Events will be added as time goes on, so please make sure to check the schedule often so you'll always be up to date. <span style="color:red">*</span></p>
