--- a/content/about.html
+++ b/content/about.html
@@ -22,7 +22,7 @@
   
   <div id="wrapper">
     <div id="left">
-      <div id="pageInfoHeader" class="floatLeft"><h1>A<br/>b<br/>o<br/>u<br/>t</h1></div>
+      <div id="aboutInfoHeader" class="pageInfoHeader floatLeft"></div>
       <div id="pageInfo" class="floatLeft">
       <div class="about alignRight" id="age">
         <p>Are you looking for a caring, fun-filled environment for your child? An environment that stimulates their young minds? Then Little Lambs Day School is the right place for you. Children between the ages of 2 and 5 (toddlers, preschoolers) are encouraged to join.</p>
