--- a/content/schedule.html
+++ b/content/schedule.html
@@ -41,7 +41,7 @@
       <div class="clear"></div>
 
       <div id="eventCalendar">
-        <div id="eventInfoHeader" class="floatLeft"><h1>2<br/>0<br/>1<br/>7<br/> <br/>&darr;<br/> <br/>2<br/>0<br/>1<br/>8</h1></div>
+        <div id="eventInfoHeader" class="floatLeft pageInfoHeader"></div>
 
         <div id="eventInfo" class="floatLeft">
           
