--- a/content/about.html
+++ b/content/about.html
@@ -78,6 +78,14 @@
 
     <div class="clear"></div>
   </div>
+
+  <footer>
+    <div id="footer">
+      <p>&copy;</p>
+      <p>Little Lambs Day School</p>
+    </div>
+  </footer>
+
   <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
