--- a/content/contact.html
+++ b/content/contact.html
@@ -53,6 +53,13 @@
     <div class="clear"></div>
   </div>
 
-    <script type="text/javascript" src="../js/index.js"></script>
+  <footer>
+    <div id="footer">
+      <p>&copy;</p>
+      <p>Little Lambs Day School</p>
+    </div>
+  </footer>
+
+  <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
