--- a/content/schedule.html
+++ b/content/schedule.html
@@ -61,7 +61,14 @@
 
      
     <div class="clear"></div>
-  </div>  
+  </div> 
+
+  <footer>
+    <div id="footer">
+      <p>&copy;</p>
+      <p>Little Lambs Day School</p>
+    </div>
+  </footer> 
 
   <script type="text/javascript" src="../js/index.js"></script>
   <script type="text/javascript" src="../js/schedule.js"></script>
