--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
       <div class="clear"></div>
   </div>
 
-      <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/gallery.js"></script>
+  <footer>
+    <div id="footer">
+      <p>&copy;</p>
+      <p>Little Lambs Day School</p>
+    </div>
+  </footer>
+
+  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/gallery.js"></script>
     
 </body>
 </html>
