--- a/content/about.html
+++ b/content/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Little Lambs Day School</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="../css/index.css">
   <link rel="stylesheet" type="text/css" href="../css/about.css">
-  <link rel="shortcut icon" type="png" href="../img/icon.png">
+  <link rel="shortcut icon" type="image/png" href="../img/icon.png">
 </head>
 <body>
   <div id="navigation">
@@ -29,7 +29,8 @@
       </div>
 
       <div class="about alignRight" id="ages">        
-        <p><div id="imgAge" class="floatLeft"></div>Throughout the day they will be taught how to read and write, while they also get to socialize with their peers. We also offer an afterschool program for children between the ages of 5 and 12 for parents who are still working and need a safe place for their children to stay so they can be supervised.</p>
+        <div id="imgAge" class="floatLeft"></div>
+        <p>Throughout the day they will be taught how to read and write, while they also get to socialize with their peers. We also offer an afterschool program for children between the ages of 5 and 12 for parents who are still working and need a safe place for their children to stay so they can be supervised.</p>
         <div class="clear"></div>
       </div>
 
@@ -38,7 +39,8 @@
       <div class="clear"></div>
   
       <div class="about alignLeft" id="nutrition">
-        <p><div id="imgNutrition" class="floatRight"></div>Nutritious meals are served that meet the requirements for healthy growing. You can expect for your child to be fed fresh fruits and vegetables (such as grapes, pears, apples, etc.), lean protein and other healthy foods. </p>
+        <div id="imgNutrition" class="floatRight"></div>
+        <p>Nutritious meals are served that meet the requirements for healthy growing. You can expect for your child to be fed fresh fruits and vegetables (such as grapes, pears, apples, etc.), lean protein and other healthy foods. </p>
         
         <div class="clear"></div>
       </div>
@@ -47,7 +49,8 @@
   
       <div class="about alignRight" id="price">
         
-        <p><div id="imgPrice" class="floatLeft"></div>We make our rates affordable to make it possible for all children to have a place to be taken care of and get the education they need to be prepared to enter public/private schools. We also help afterschool kids with their homework if they're having trouble in that area. Please <a href="contact">contact</a> us for more information.</p>
+        <div id="imgPrice" class="floatLeft"></div>
+        <p>We make our rates affordable to make it possible for all children to have a place to be taken care of and get the education they need to be prepared to enter public/private schools. We also help afterschool kids with their homework if they're having trouble in that area. Please <a href="contact">contact</a> us for more information.</p>
         <div class="clear"></div>
       </div>
   
