--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Little Lambs Day School</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/gallery.css">
-  <link rel="shortcut icon" type="png" href="img/icon.png">
+  <link rel="shortcut icon" type="image/png" href="img/icon.png">
 </head>
 <body>
   <div id="navigation">
@@ -25,19 +25,19 @@
         <div id="gallery">
           <div id="slideshow">
             <div class="slides fade">
-              <img src="img/img1.jpg" style="width: 100%">
+              <img src="img/img1.jpg" alt="The library at Little Lambs Day School">
             </div>
 
             <div class="slides fade">
-              <img src="img/img2.jpg">
+              <img src="img/img2.jpg" alt="Another view of the library">
             </div>
 
             <div class="slides fade">
-              <img src="img/img3.jpg">
+              <img src="img/img3.jpg" alt="One of the classrooms at Little Lambs Day School">
             </div>
 
             <div class="slides fade">
-              <img src="img/img4.jpg">
+              <img src="img/img4.jpg" alt="The Little Lambs Day School playroom">
             </div>
 
             <button id="previousButton">&#10094;</button>
@@ -50,7 +50,8 @@
             <p>Are you looking for a caring, fun-filled environment for your child? An environment that stimulates their young minds? Then Little Lambs Day School is the right place for you. Children between the ages of 2 and 5 (toddlers, preschoolers) are encouraged to join.</p>
           </div>
           <div class="abouts alignRight" id="ages">            
-            <p><div id="imgAbout" class="floatLeft"></div>Throughout the day they will be taught how to read and write, while they also get to socialize with their peers. We also offer an afterschool program for...</p>
+            <div id="imgAbout" class="floatLeft"></div>
+            <p>Throughout the day they will be taught how to read and write, while they also get to socialize with their peers. We also offer an afterschool program for...</p>
           </div>
           <div class="clear"></div>
           <div class="continueReading">
