--- a/content/about.html
+++ b/content/about.html
@@ -18,7 +18,11 @@
     </nav>
   </div>
 
-  <div id="header"></div>
+  <div id="header">
+    <h1>Little Lambs Day School</h1>
+    <div id="header-pic"></div>
+    <div class="clear"></div>
+  </div>
   
   <div id="wrapper">
     <div id="left">
