--- a/content/contact.html
+++ b/content/contact.html
@@ -48,7 +48,7 @@
           </ul>
 
           <div id="emailPic">
-            <p>ask@littlambsdayschool.com</p>
+            <p>ask@littlelambs-dayschool.com</p>
           </div>
         </div>
       </div>
