--- a/content/schedule.html
+++ b/content/schedule.html
@@ -12,7 +12,7 @@
 <body>
   <div id="navigation">
     <nav>
-      <a href="https://genayajames.github.io/">Home</a>
+      <a href="http://genayajames.github.io/">Home</a>
       <a href="about">About</a>
       <a href="contact">Contact</a>
       <a id="currentPage" href="">Schedule</a>
