--- a/content/about.html
+++ b/content/about.html
@@ -11,7 +11,7 @@
 <body>
   <div id="navigation">
     <nav>
-      <a href="https://genayajames.github.io/">Home</a>
+      <a href="http://genayajames.github.io/">Home</a>
       <a id="currentPage" href="">About</a>
       <a href="contact">Contact</a>
       <a href="schedule">Schedule</a>
