--- a/content/contact.html
+++ b/content/contact.html
@@ -12,7 +12,7 @@
 <body>
   <div id="navigation">
     <nav>
-      <a href="https://genayajames.github.io/">Home</a>
+      <a href="http://genayajames.github.io/">Home</a>
       <a href="about">About</a>
       <a id="currentPage" href="">Contact</a>
       <a href="schedule">Schedule</a>
